2005-03-16  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that writeproxy primary failures are now detected.

2005-03-16  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that failure to open debug logs is no longer fatal.

2005-03-15  Derek Price  <derek@ximbiot.com>

	* HACKING, NEWS: Note new Automake version.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* configure: Regenerated.

2005-03-09 Derek Price <derek@ximbiot.com>

	* configure.in: Don't generate windows-NT/mkconfig or
	windows-NT/fix-msvc-mak.
	* configure: Regenerated.

2005-03-07  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add .\lib\closeout.h, .\lib\getpagesize.h and
	.\lib\pagealign_alloc.h files.
	* cvsnt.dep, cvsnt.mak: Regenerate for cvsnt.dsp changes.

2005-03-07  Mark D. Baushke  <mdb@cvshome.org>

	* config.h.in, configure: Regenerated.

2005-03-04  Jim Hyslop  <jhyslop@ieee.org>

	* NEWS: Note fix for compile errors on IRIX 5.3.

2005-03-03 Derek Price <derek@ximbiot.com>

	* configure.in: Remove checks for valloc and mmap.
	* gnulib-modules: Add pagealign_alloc.
	* NEWS: Note new buffer allocation method.

2005-03-03 Derek Price <derek@ximbiot.com>

	* gnulib-update: Clean up "saved" files on interrupt.

2005-03-02  Jim Meyering  <jim@meyering.net>

	* NEWS: Note that cvs now detects write errors on stdout.
	* gnulib-modules: Add closeout.
	* gnulib.txt: Regenerate.

2005-03-02 Derek Price <derek@ximbiot.com>

	* configure.in: Remove checks for funcs covered by GNULIB.

2005-03-02 Derek Price <derek@ximbiot.com>

	* gnulib-update: Redirect gnulib-tool output back to /dev/null.

2005-03-02 Derek Price <derek@ximbiot.com>

	* gnulib-update: Avoid munging timestamps when files haven't changed.

2005-03-01 Derek Price <derek@ximbiot.com>

	* NEWS: Note GNULIB update.  Expand --disables-* note.

2005-03-01 Derek Price <derek@ximbiot.com>

	* gnulib-update: Correct m4/error.m4 to avoid compiling the GNULIB
	lib/error.c.
	(MODULES): Move content to...
	* gnulib-modules: This new file.
